# pimeroni-pico-audio-test

./: CMakeLists.txt  README.md  demo.cpp  main.cpp  pimoroni_pico_import.cmake  synth.cpp
src/: audio.hpp  synth.hpp
